# CGE-Piano

./: .cproject  .gitignore  .project  CGE-Dokumentation.docx  CGE-Dokumentation.odt  CMakeLists.txt  README  nano.save
3dModels/: piano.3ds  pianoWood.tga
Make/Linux/: CMakeLists.txt
Make/MacOS/: CMakeLists.txt
Resources/3dModels/: Piano N021210.3DS  blackPiano.3DS  brownPiano.3ds  floor.dae  grand_piano.3DS  metronome.3ds  mm.3ds  ripple.tga  stwood.tga  swingding.3ds  swingding.dae  wall.dae  white.tga
Resources/3dModels/Grand Piano/: grand_piano.lwo  grand_piano.mtl
Resources/3dModels/Grand Piano/Texture/: grpiano_l.tga
Src/: GLFWWrapper.cpp  GLFWWrapper.h  main.cpp
Src/Infrastructure/: ApplicationManager.cpp  ApplicationManager.h  GLFWWrapper.cpp  GLFWWrapper.h  UpdateListener.cpp  UpdateListener.h
Src/Input/: InputListener.h  InputManager.cpp  InputManager.h
Src/ModelLoader/: MeshLoader.cpp  MeshLoader.h  ModelManager.cpp  ModelManager.h  MyMaterial.cpp  MyMaterial.h  MyMesh.cpp  MyMesh.h  TextureLoader.cpp  TextureLoader.h
Src/Rendering/: RenderManager.cpp  RenderManager.h
Src/Representations/: Actor.cpp  Actor.h  Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  Texture.cpp  Texture.h
Src/Scene/: SceneManager.cpp  SceneManager.h
Src/Sound/: SoundManager.cpp  SoundManager.h
Src/Utility/: IllegalStateException.h  MessagedException.h  OpenAL.h  OpenGL.h  foreach.h
