ADD_DEFINITIONS(-O0 -Werror -Wall -std=c++0x)

SET(EXECUTABLE_OUTPUT_PATH "Bin/Linux/")

INCLUDE_DIRECTORIES("Lib/Include")
INCLUDE_DIRECTORIES("Lib/Header")

FILE(GLOB_RECURSE PIANO_SCENE_SOURCES "Src/*.cpp")

ADD_EXECUTABLE(PianoScene ${PIANO_SCENE_SOURCES})

FIND_PACKAGE(OpenGL REQUIRED)

ADD_LIBRARY(glfw STATIC IMPORTED)

SET_PROPERTY(TARGET glfw 
		     PROPERTY
             IMPORTED_LOCATION "Lib/Linux/libglfw.a")

TARGET_LINK_LIBRARIES(PianoScene glfw ${OPENGL_LIBRARIES} openal)
