ADD_DEFINITIONS(-O0 -Werror -Wall -std=c++0x)

SET(EXECUTABLE_OUTPUT_PATH "Bin/MacOS/")

INCLUDE_DIRECTORIES("Lib/Include")

FILE(GLOB_RECURSE PIANO_SCENE_SOURCES "Src/*.cpp")

ADD_EXECUTABLE(PianoScene ${PIANO_SCENE_SOURCES})

INCLUDE_DIRECTORIES("/System/Library/Frameworks")
FIND_LIBRARY(COCOA_LIBRARY Cocoa)
FIND_LIBRARY(OPENGL_LIBRARY OpenGL)

ADD_LIBRARY(glfw STATIC IMPORTED)

SET_PROPERTY(TARGET glfw 
		     PROPERTY
             IMPORTED_LOCATION "Lib/MacOS/libglfw.a")

TARGET_LINK_LIBRARIES(PianoScene ${OPENGL_LIBRARY} ${COCOA_LIBRARY} glfw)
