ADD_DEFINITIONS(-O0 -Werror -Wall -std=c++0x)

SET(EXECUTABLE_OUTPUT_PATH "Bin/MacOS/")

INCLUDE_DIRECTORIES("Lib/Include")
INCLUDE_DIRECTORIES("Lib/Header")

FILE(GLOB_RECURSE PIANO_SCENE_SOURCES "Src/*.cpp")

ADD_EXECUTABLE(PianoScene ${PIANO_SCENE_SOURCES})

INCLUDE_DIRECTORIES("/System/Library/Frameworks")
FIND_LIBRARY(COCOA_LIBRARY Cocoa)
FIND_LIBRARY(OPENGL_LIBRARY OpenGL)
FIND_LIBRARY(OPENAL_LIBRARY OpenAL)

ADD_LIBRARY(glfw STATIC IMPORTED)

SET_PROPERTY(TARGET glfw 
		     PROPERTY
             IMPORTED_LOCATION "Lib/MacOS/libglfw.a")
             
ADD_LIBRARY(assimp STATIC IMPORTED)

SET_PROPERTY(TARGET assimp 
		     PROPERTY
             IMPORTED_LOCATION "Lib/MacOS/libassimp.a")
             
ADD_LIBRARY(libjpeg STATIC IMPORTED)

SET_PROPERTY(TARGET libjpeg 
		     PROPERTY
             IMPORTED_LOCATION "Lib/MacOS/libjpeg.a")

ADD_LIBRARY(libtiff STATIC IMPORTED)

SET_PROPERTY(TARGET libtiff 
		     PROPERTY
             IMPORTED_LOCATION "Lib/MacOS/libtiff.a")
             
ADD_LIBRARY(devIL STATIC IMPORTED)
             
SET_PROPERTY(TARGET devIL 
		     PROPERTY
             IMPORTED_LOCATION "Lib/MacOS/libIL.a")
             
ADD_LIBRARY(alut STATIC IMPORTED)

SET_PROPERTY(TARGET alut 
		     PROPERTY
             IMPORTED_LOCATION "Lib/MacOS/libalut.a")

TARGET_LINK_LIBRARIES(PianoScene ${OPENGL_LIBRARY} ${COCOA_LIBRARY} ${OPENAL_LIBRARY} alut glfw assimp devIL libjpeg libtiff)
